First Maven version