@@ -24,5 +24,6 @@
 
 curdir=$(dirname $(readlink -f $0))
 classpath="$curdir/bin":/$(ls $curdir/lib/* | tr '\n' ':')
-LANG= java -cp $classpath pl.poznan.put.cs.bioserver.sandbox.PrintAngles $@\
-    2>/dev/null | awk 'NR != 1 { print }'
+java -XX:+UseConcMarkSweepGC -Xmx1g -cp $classpath pl.poznan.put.cs.bioserver.sandbox.PrintAngles $@\
+    | cat
+#    | tac | head -n -1 | tac
